<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dangnhap_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/fpt_logo1"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        android:contentDescription="@string/fpt_logo_description"
        android:src="@drawable/fpt_logo"
        tools:ignore="ImageContrastCheck" />

    <!-- Login Form Title -->
    <TextView
        android:id="@+id/LoginForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fpt_logo1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/login_title"
        android:textSize="@dimen/text_size24"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <!-- Username Field -->
    <EditText
        android:id="@+id/log_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginForm"
        android:layout_marginTop="@dimen/margin_20"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/margin_48"
        android:selectAllOnFocus="true"
        android:textColorHint="#263238"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/log_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_username"
        android:layout_marginTop="@dimen/margin_10"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="@dimen/margin_48"
        android:selectAllOnFocus="true"
        android:textColorHint="#263238"
        tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_password"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/login_button"
        android:enabled="true"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <!-- "No Account?" TextView -->
    <TextView
        android:id="@+id/log_NotAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/not_account_text"
        android:textColor="#263238" />

    <!-- "Or" Layout with separator lines -->
    <LinearLayout
        android:id="@+id/log_or_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_NotAccount"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- Left Separator -->
        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/height_1"
            android:layout_weight="1"
            android:background="@color/black" />

        <!-- "Or" Text -->
        <TextView
            android:id="@+id/log_Or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:text="@string/Or"
            android:textSize="@dimen/text_size20"
            android:textStyle="bold" />

        <!-- Right Separator -->
        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/height_1"
            android:layout_weight="1"
            android:background="@color/black" />

    </LinearLayout>

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_or_layout"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/signup"
        android:enabled="true"
        tools:ignore="VisualLintButtonSize" />
</RelativeLayout>
